--- a/dd/css/style.css
+++ b/dd/css/style.css
@@ -1,124 +1,157 @@
-@import url('https://fonts.googleapis.com/css?family=Cardo|Pacifico|Quattrocento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caudex&display=swap');
+@font-face { 
+  font-family: 'Web font'; 
+  src: url('../fonts/Butler_Medium.otf') format('woff2'), 
+       url('../fonts/Butler_Medium.otf')  format('truetype'),
+       url('../fonts/Butler_Medium.otf') format('woff'); 
+  font-weight: normal; 
+  font-style: normal; 
+}
+
+
+
+.container-fluid {
+    background-color: white;
+    max-width: 74%;
+    border-left: 1px solid rgb(212, 209, 209);
+    border-right: rgb(212, 209, 209) 1px solid;
+    
+}
+
+.title_row {
+    display: flex;
+    justify-content: center;
+}
 
 .title {
+    
+    text-align: center;
+    font-family: 'Caudex', serif;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.275em;
+    color: #6A6A6A;
+    padding-top: 120px;
+    padding-bottom: 89px;
+}
+
+.navbar {
+    text-align: center;
+    font-family: "Butler";
+    font-size: 24px;
+    line-height: 29px;
+    letter-spacing: -0.05em;
+    margin-bottom: 120px;
+    
+}
+
+.links {
+    text-decoration: none;
+    color: #6A6A6A;
+}
+
+.links:hover{
+    color: rgb(44, 44, 44);
+    text-decoration: none;
+}
+
+.content {
+    margin-bottom:0x;
+}
+
+.card {
+  overflow: hidden;
+  
+}
+
+.card-reveal .card-body {
   display: flex;
+  align-items: center;
   justify-content: center;
-  margin-top: 50px;
-  font-family: Pacifico;
-  font-size: 16px;
- 
-}
-
-.nav-link{
-  font-family: Cardo;
-  font-size: 36px;
-  text-align: center;
-  color: #3D3D3D;
-  text-decoration: none;
-  vertical-align: middle;
-  }
-
-
-.nav-link:hover{
-  transform: scale(1.05);
-  color: #787878;
-}
-
-.porfolio{
-  display: flex;
-  justify-content: center;
-  margin-top: 32px;
-  font-family: Pacifico;
-  font-size: 13px;
-}
-
-
-.main{
-  padding-top: 30px; 
-}
-
-.place{
-  padding-top: 15px;
-  margin: 10px;
-}
-.place:hover{
-  box-shadow:0 0 4px rgba(0,0,0,0.5);
-  border-radius: 8px;
-  transform: scale(1.01);
-}
-
-.image{
-  opacity: 0.9;
+  position: absolute;
   width: 100%;
-  border-radius: 6px;
-  box-shadow: inset 1px 0px 10px rgba(0,0,0,0.5);
-}
-.image:hover{
-  opacity: 1;
-}
-.cardinfo{
-  font-family: Cardo;
   text-align: center;
-  margin-top: 15px; 
-}
-.info{
-  font-size: 16px;
-  font-family: Pacifico;
-}
-.info2{
-  padding-top: -15px;
-  font-family: Cardo;
-  font-size: 15px;
+  height: 100%;
+  bottom: -100%;
+  -webkit-transition: bottom .10s ease-in-out;
+  transition: bottom .5s ease-in-out;
 }
 
-.about{
-  margin-top: 150px;
-  text-align: center;
-}
-.aboutimg{
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
-  box-shadow:0 0 4px rgba(0,0,0,0.5);
-  opacity: 0.8;
-
-}
-.aboutme{
-  padding-top: 20px;
-  padding-bottom: 26px;
-  font-size: 36px;
-  font-family: Pacifico;
-}
-.aboutmeinfo{
-  margin: auto;
-  width: 80%;
-  font-size: 17px;
-  font-family: Cardo;
-  padding-bottom: 20px;
+.card-reveal .card-img-top {
+  -webkit-transition: -webkit-transform .5s ease-in-out;
+  transition: -webkit-transform .5s ease-in-out;
+  transition: transform .5s ease-in-out;
+  transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
 }
 
-.social{
-  box-sizing: border-box;
-  position: relative;
-  padding-bottom: 50px;
-  }
-.icon{
-  margin: 8px;
-  top: 50%;
+.card-reveal:hover .card-body {
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
 }
-.vk:hover{
+
+.card-reveal:hover .card-img-top {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
-  opacity: 0.8;
 }
- .inst:hover {
-  transform: scale(1.1);
-  opacity: 0.8;
+
+.card-reveal .card-body .card-title {
+  font-size: .85rem;
+  font-family: 'Caudex', serif;
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: bolder;
 }
- .wsp:hover{
-  transform: scale(1.1);
-  opacity: 0.8;
+
+img {
+    width: 100%;       
+    
 }
- .etsy:hover{
-  transform: scale(1.1);
-  opacity: 0.8;
+
+.about_img {
+    justify-content: center;
 }
+
+.about_image {
+    border-radius: 250px;
+    margin-top: 170px;
+    border: 1px solid  #6A6A6A;
+    width: 180px;
+    opacity: 90%;
+}
+
+.about_title_h1 {
+    justify-content: center;
+}
+
+.about_title {
+    padding-top: 32px;
+    text-align: center;
+    font-family: Butler;
+    font-size: 33px;
+    line-height: 29px;
+    letter-spacing: -0.05em;
+    color: #6A6A6A;
+}
+
+.about_info {
+    padding-top: 25px;
+    text-align: center;
+    font-family: Caudex;
+    font-size: 19px;
+    line-height: 15px;
+    color: rgb(70, 70, 70);
+    padding-bottom: 15px;
+    
+}
+
+.social {
+    justify-content: center;
+    padding-bottom: 100px;
+}
+.social_icon {
+    transform: scale(0.8);
+ }
+
+ .social_icon:hover{
+     transform: scale(0.9);
+ }
